# historic-sympa

./: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  RELEASE_NOTES  check_perl_modules.pl  configure.ac  important_changes.pl  merge-conflicts  set_symlinks.pl  sympa.spec  sympa.spec.in
default/: Makefile.am
default/templates/: Makefile.am
default/web_tt2/: copy_template.tt2  crash.tt2  edit_template.tt2  error.tt2  javascript.tt2  ls_templates.tt2  main.tt2  tt2_error.tt2
doc/: Makefile  Makefile.am  parse_tex.pl  sympa.ps  sympa.tex  sympa.tex.tpl
doc/html/: index.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html  sympa.html  sympa.ps
doc/man8/: Makefile.am  alias_manager.8  alias_manager.pod.in  archived.8  archived.pod.in  bounced.8  bounced.pod.in  sympa.8  sympa.pod  sympa.pod.in
doc/sample/: Makefile.am
soap/: Makefile.am  SympaTransport.pm  sympa.wsdl  sympa_soap_client.pl  sympa_soap_client.pl.in  sympa_soap_server.fcgi  sympa_soap_server.fcgi.in  sympasoap.pm
src/: Archive.pm  Bulk.pm  Commands.pm  Conf.pm  Family.pm  Language.pm  Ldap.pm  List.pm  Log.pm  Makefile  Makefile.am  Message.pm  SQLSource.pm  Scenario.pm  Upgrade.pm  admin.pm  alias_manager.pl  alias_manager.pl.in  aliaswrapper.c  bouncequeue.c  bulk.pl  bulk.pl.in  familyqueue.c  mail.pm  queue.c  report.pm  smtp.pm  spooler.pl.in  sympa.pl  sympa.pl.in  sympa_newaliases.pl.in  sympa_wizard.pl  sympa_wizard.pl.in  task_manager.pl  task_manager.pl.in  tools.pl  tt2.pl  tt2native.pl  virtualwrapper.c
src/cgi/: Makefile.am  archived.pl.in  bounced.pl.in  sympa_soap_server-wrapper.fcgi.c  sympa_soap_server.fcgi.in  wwsympa-wrapper.fcgi.c  wwsympa.fcgi.in
src/etc/: Makefile.am  edit_list.conf  mhonarc-ressources  mhonarc-ressources.tt2  sympa.conf  wwsympa.conf
src/lib/: Archive.pm  Auth.pm  Bounce.pm  BounceMessage.pm  Bulk.pm  CAS.pm  Challenge.pm  Commands.pm  Conf.pm  Config_XML.pm  DBManipulatorDefault.pm  DBManipulatorInformix.pm  DBManipulatorMySQL.pm  DBManipulatorOracle.pm  DBManipulatorPostgres.pm  DBManipulatorSQLite.pm  DBManipulatorSybase.pm  Datasource.pm  Family.pm  Fetch.pm  KeySpool.pm  LDAPSource.pm  Language.pm  Ldap.pm  List.pm  Lock.pm  Log.pm  Makefile.am  Marc.pm  Message.pm  Messagespool.pm  OAuthConsumer.pm  OAuthProvider.pm  PlainDigest.pm  Robot.pm  SDM.pm  SQLSource.pm  Scenario.pm  SharedDocument.pm  Site.pm  (+29 more)
src/libexec/: Makefile.am  alias_manager.pl.in  aliaswrapper.c  bouncequeue.c  familyqueue.c  ldap_alias_manager.pl.in  mysql_alias_manager.pl.in  queue.c  virtualwrapper.c
src/sbin/: Makefile.am  alias_manager.pl.in  archived.pl.in  bounced.pl.in  bulk.pl.in  spooler.pl.in  sympa.pl.in  sympa_wizard.pl.in  task_manager.pl.in
src/soap/: Makefile.am  sympa_soap_client.pl.in  sympa_soap_server.fcgi.in
src/wwsympa/: Makefile.am  bounced.pl.in  wwsympa.fcgi.in
src/www/: Makefile.am
t/: 00compile_modules.t  01compile.t  01compile_executables.t  02critic.t  03var.t  04pod.t  05pod-coverage.t  06spelling.t  07space.t  Datasource_LDAP.t  Instruction.t  Language.t  LockedFile.t  Logger.t  Mailer.t  Makefile.am  Message.t  Rule.t  Tools_DKIM.t  Tools_Daemon.t  Tools_Data.t  Tools_File.t  Tools_SMIME.t  Tools_Time.t  archive.t  compile_executables.t  compile_modules.t  critic.c  critic.t  datasource_mysql.t  datasource_oracle.t  datasource_postgresql.t  datasource_sqlite.t  datasource_sybase.t  instruction.t  lock.t  log_database.t  logger.t  message.t  pod-coverage.t  (+22 more)
t/Spool/: File.t
t/database/: mysql.t  mysql_live.t  oracle.t  postgresql.t  postgresql_live.t  sqlite.t  sqlite_live.t  sybase.t
t/datasource/: mysql.t  mysql_live.t  oracle.t  postgresql.t  postgresql_live.t  sqlite.t  sqlite_live.t  sybase.t
t/pki/: ca.pem  convert-cert  gen-cert  rousse.pem
t/samples/: error-500-500.01.eml  error-500-504.01.eml  error-500-510.01.eml  error-500-510.02.eml  error-500-511.01.eml  error-500-511.02.eml  error-500-550.01.eml  error-500-550.02.eml  error-500-550.03.eml  error-500-550.04.eml  error-500-550.05.eml  error-500-550.06.eml  error-500-550.07.eml  error-500-550.08.eml  error-500-550.09.eml  error-500-550.10.eml  error-500-550.11.eml  error-500-550.12.eml  error-500-550.13.eml  error-500-550.14.eml  error-500-550.15.eml  error-500-550.16.eml  error-500-550.17.eml  error-500-550.18.eml  error-500-552.01.eml  error-500-554.01.eml  error-500-554.02.eml  error-500-554.03.eml  error-500-554.04.eml  error-500.1.eml  error-511-550.01.eml  error-511-550.02.eml  error-511-550.03.eml  error-511-550.04.eml  error-511-550.05.eml  error-511-550.06.eml  error-511-550.07.eml  error-511-550.08.eml  error-511-550.09.eml  error-511-550.10.eml  (+38 more)
t/spool/: file.t  sql.t
web_tt2/: Makefile.am  active_lists.tt2  add_request.tt2  admin.tt2  admin_menu.tt2  arcsearch.tt2  arcsearch_form.tt2  automatic_lists_request.tt2  blacklist.tt2  change_email.tt2  compose_mail.tt2  copy_template.tt2  crash.tt2  create_list.tt2  create_list_request.tt2  css.tt2  d_control.tt2  d_editfile.tt2  d_install_shared.tt2  d_properties.tt2  d_read.tt2  d_upload.tt2  dump_scenario.tt2  edit_config.tt2  edit_list_request.tt2  edit_template.tt2  editfile.tt2  editsubscriber.tt2  error.tt2  family_signoff_request.tt2  footer.tt2  get_closed_lists.tt2  get_inactive_lists.tt2  get_latest_lists.tt2  get_pending_lists.tt2  help.tt2  help_admin.tt2  help_editlist.tt2  help_introduction.tt2  help_user.tt2  (+58 more)
wwsympa/: Auth.pm  Bounce.pm  Challenge.pm  Makefile  Makefile.am  SharedDocument.pm  SympaSession.pm  archived.pl  archived.pl.in  bounced.pl  bounced.pl.in  cookielib.pm  wwslib.pm  wwsympa.fcgi  wwsympa.fcgi.in  wwsympa.pm
wwsympa/Marc/: Search.pm
wwsympa/icons/: Makefile.am
wwsympa/tt2/: add_request.tt2  (+23 more)
www/: Makefile.am
(+564 files in other folders)
